css/main.css
@font-face {
	font-family: 'WOODY';
	src:url('fonts/WOODY.eot');
	src:url('fonts/WOODY.eot?#iefix') format('embedded-opentype'),
		url('fonts/WOODY.woff') format('woff'),
		url('fonts/WOODY.ttf') format('truetype'),
		url('fonts/WOODY.svg#WOODY') format('svg');
	font-weight: normal;
	font-style: normal;
}

body {
  font-family: 'Open Sans', sans-serif;
  color: #ffffff;
  background: #000000;
}

/* Bootstrap override */
.modal-backdrop.fade.in { opacity: 0.9; }

a, a:hover, a:active, a:visited {
  color: #ffffff;
  text-decoration: none;
}

a:hover, a:active {
  text-decoration: underline;
}

.background-cover {
  position: relative;
  font-family: 'WOODY';
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  -moz-background-size: contain;
  -o-background-size: contain;
  background-size: contain;
}

.top {
  right: 20px;
  bottom: 20px;
  position: absolute;
  width: 16px;
  height: 16px;
}

.section-heading {
  font-family: 'WOODY';
  font-size: 1.3em;
  letter-spacing: .1em;
}

.paragraph {
  font-size: 0.9em;
}

header #masthead #title {
  display: inline-block;
  padding: 10px 20px 0px 20px;
}

header #masthead #awards {
  margin-left: 20px;
  margin-bottom: 30px;
  display: inline-block;
}

header #masthead-separator {
  height: 10px;
  margin-top: -8px;
  background-image: url('/img/masthead-separator.png');
  background-size: auto 13px;
  background-repeat: no-repeat;
}

#intro {
  height: 544px;
  background-image: url('/img/intro.jpg');
}

#intro .title {
  margin-top: 60px;
  font-size: 1.2em;
  line-height: 1.7em;
  letter-spacing: .1em;
}

#intro .sub-title {
  margin-top: 20px;
  font-size: .75em;
  line-height: 2.2em;
  letter-spacing: .1em;
}

#intro .social {
  margin-top: 20px;
}

#intro .social a {
  width: 38px;
  height: 38px;
  text-decoration: none;
  margin-right: 4px;
}

#nav-and-credits { margin-top: 132px; }

#nav {
  font-size: .9em;
  letter-spacing: .1em;
}

#nav ul, #nav li {
  margin: 0;
  padding: 0;
}

#nav li {
  list-style-type: none;
  display: inline-block;
  width: 84px;
  height: 68px;
  padding-top: 2px;
  padding-left: 14px;
  background-image: url('/img/nav-chalk-mark.png');
  background-size: 6px auto;
  background-repeat: no-repeat;
}

#credits img { margin-left: -14px; }

#info {
  height: 468px;
  background-image: url('/img/info.jpg');
}

#info .paragraph {
  font-family: 'Open Sans', sans-serif;
}

#news {
  height: 468px;
  background-image: url('/img/news.jpg');
}

#news p, #news #tweet-container { margin-left: 510px; }

#video {
  height: 468px;
  background-image: url('/img/video.jpg');
}

#video .paragraph { width: 460px; }

#video .embedded-video {
  width: 853px;
  left: 50%;
  margin-left: -426px;
  top: 50%;
  margin-top: -240px;
  height: 480px;
}

#video #video-thumbnails {
  font-family: 'Open Sans', sans-serif;
  font-size: .9em;
  width: 460px;
  margin: 0px;
}

#video #video-thumbnails img { margin-bottom: 10px; }

.quote {
  padding-top: 10px;
  font-family: 'WOODY';
  font-size: 1.1em;
  letter-spacing: .1em;
  line-height: 1.6em;
}

.quoter {
  font-family: 'Open Sans', sans-serif;
  font-size: 1em;
}

#images {
  font-family: 'Open Sans', sans-serif;
  height: 468px;
  background-image: url('/img/images.jpg');
}

#images p, #images div.grid {
  margin-left: 510px;
  padding-left: 0px;
}

#images .thumbs-row .unit {
  padding: 0px;
  margin-top: 15px;
  margin-bottom: 15px;
}

#images .thumbs-row a {
  width: 115px;
  height: 61px;
}

#images #image-carousel {
  display: none;
  position: fixed;
  width: 800px;
  left: 50%;
  margin-left: -400px;
  top: 50%;
  margin-top: -211px;
  height: 422px;
}

#images #image-carousel .carousel-indicators li {
  cursor: pointer;
}

#images #image-carousel .carousel-control {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  top: 50%;
}

footer {
  height: 60px;
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: .8em;
}

footer .grid .unit {
  padding: 20px;
  opacity: 0.85;
}

footer #copyright div {
  float: left;
}

footer .chalk-mark {
  background-image: url('/img/footer-chalk-mark.png');
  background-size: 4px auto;
  background-repeat: no-repeat;
  width: 4px;
  height: 26px;
  margin: -2px 6px 0px 6px;
}

